# email-encoding

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/body/: base64.rs  chooser.rs  mod.rs
src/headers/: hex_encoding.rs  mod.rs  quoted_string.rs  rfc1522.rs  rfc2047.rs  rfc2231.rs  utils.rs  writer.rs
