[package]
name = "email-encoding"
version = "0.1.2"
description = "Low level email encoding RFCs implementations"
repository = "https://github.com/lettre/email-encoding"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
categories = ["email", "encoding"]
keywords = ["email", "rfc2047", "rfc2231"]

[dependencies]
base64 = { version = "0.13", default-features = false }
memchr = "2.1"

[dev-dependencies]
pretty_assertions = "1"
