[package]
name = "email-encoding"
version = "0.2.0"
description = "Low level email encoding RFCs implementations"
repository = "https://github.com/lettre/email-encoding"
edition = "2021"
rust-version = "1.57"
license = "MIT OR Apache-2.0"
categories = ["email", "encoding"]
keywords = ["email", "rfc2047", "rfc2231"]

[dependencies]
base64 = { version = "0.22", default-features = false }
memchr = "2.1"

[dev-dependencies]
pretty_assertions = "1"
